--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
     "bootstrap": "^5.3.8",
-    "next": "15.5.3",
+    "next": "^16.1.1",
+    "package-name": "^0.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
